small spacing fixes
fixed grid div row widths, hero fonts

--- a/css/new-style.css
+++ b/css/new-style.css
@@ -41,7 +41,7 @@ nav a{
     top: -70px;
     color: white;
     font-family: 'Abril Fatface', serif;
-    font-size: 120px;
+    font-size: 100px;
     line-height: 90%;
     text-align: center;
     letter-spacing: 3px;
@@ -53,7 +53,7 @@ nav a{
     right: 155px;
     color: white;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     z-index: 1;
 
 
@@ -117,7 +117,7 @@ nav a{
   img[src="images/green-celery.png"]{
     right:0;
     position: absolute;
-    top: 100px;
+    top: 125px;
     width: 140px;
     float: right;
   }
@@ -132,11 +132,7 @@ nav a{
   width:600px;
 }
 
-.myWork{
-  background-color: #FFFCF3;
-  padding: 10px;
-  margin: 30px 50px;
-}
+
   h1{
   padding: 0px 30px;
 
@@ -161,11 +157,17 @@ nav a{
 }
 
 /*My Work Grid*/
+
+.myWork{
+  background-color: #FFFCF3;
+  padding: 10px;
+  margin: 30px 50px;
+}
 .case-study{
   padding: 5px;
   margin: 5px;
   display: grid;
-  grid-template-rows:500px 500px 500px;
+  grid-template-rows:450px 450px 450px;
   grid-template-areas: "cs1" "cs2" "cs3";
   
 }
